--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
     .loader-text {
       font-family: 'Poppins', sans-serif;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       line-height: 1.6;
       color: #ccc;
       padding: 0 2rem;
@@ -52,39 +52,40 @@
       display: grid;
       gap: 2vw;
       opacity: 0;
-      animation: showBlocks 1s ease 6s forwards;
+      animation: fadeIn 1s ease 6s forwards;
       z-index: 1;
     }
 
     .block {
-      border-radius: 20px;
+      border-radius: 24px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
       color: #fff;
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       font-weight: bold;
       cursor: pointer;
       background-size: 200% 200%;
       transition: all 0.4s ease;
       overflow: hidden;
-      padding: 1.2rem;
-      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.4);
+      padding: 1.5rem;
+      box-shadow: 0 8px 26px rgba(0,0,0,0.45);
       background-blend-mode: screen;
     }
 
     .block:hover {
-      transform: scale(1.05);
-      filter: brightness(1.15);
+      transform: scale(1.06);
+      filter: brightness(1.2);
     }
 
     .emoji {
       display: flex;
-      align-items: center;
       justify-content: center;
-      text-align: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
     }
 
     .accionable {
@@ -104,25 +105,25 @@
       bottom: 3vh;
       left: 50%;
       transform: translateX(-50%);
-      background: #00ffc3;
+      background: linear-gradient(135deg, #00ffc3, #00bfa6);
       color: #000;
-      font-weight: bold;
+      font-weight: 700;
       border: none;
-      padding: 0.6rem 1.2rem;
+      padding: 0.6rem 1.4rem;
       font-size: 0.95rem;
       border-radius: 999px;
       cursor: pointer;
       display: none;
       animation: pulse 2s infinite;
       z-index: 5;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.25);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.4);
     }
 
     #overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.9);
-      color: white;
+      background: rgba(0, 0, 0, 0.95);
+      color: #fff;
       font-family: 'Poppins', sans-serif;
       font-size: 1.3rem;
       display: none;
@@ -132,6 +133,12 @@
       flex-direction: column;
       z-index: 30;
       padding: 2rem;
+    }
+
+    #overlay strong {
+      font-size: 2.2rem;
+      color: #00ffc3;
+      margin-top: 1rem;
     }
 
     @media (orientation: landscape) {
@@ -157,7 +164,7 @@
       to { opacity: 0; visibility: hidden; }
     }
 
-    @keyframes showBlocks {
+    @keyframes fadeIn {
       to { opacity: 1; }
     }
 
@@ -190,7 +197,7 @@
       const r = parseInt(hex.slice(1,3),16);
       const g = parseInt(hex.slice(3,5),16);
       const b = parseInt(hex.slice(5,7),16);
-      const light = `rgba(${Math.min(r+30,255)},${Math.min(g+30,255)},${Math.min(b+30,255)},0.75)`;
+      const light = `rgba(${Math.min(r+50,255)},${Math.min(g+50,255)},${Math.min(b+50,255)},0.75)`;
       return `linear-gradient(135deg, ${hex}, ${light})`;
     }
 
@@ -207,13 +214,13 @@
         div.style.background = genGradient(libro.colores[i] || "#555");
         div.innerHTML = `
           <div class="emoji">${emojis[i]} ${palabra}</div>
-          <div class="accionable" id="acc${i}">${libro.frases[i]}</div>
+          <div class="accionable">${libro.frases[i]}</div>
         `;
         div.onclick = () => {
           if (revelado) return location.reload();
           if (i === portadaIndex) {
-            div.innerHTML = `<img src="${libro.portada}" style="max-width:85%; max-height:75%; border-radius:16px; box-shadow:0 10px 24px rgba(0,0,0,0.4)" />`;
-            document.querySelectorAll(".block").forEach((b,j)=>{
+            div.innerHTML = `<img src="${libro.portada}" style="max-width:85%; max-height:75%; border-radius:16px; box-shadow:0 10px 30px rgba(0,0,0,0.4)" />`;
+            document.querySelectorAll(".block").forEach((b, j) => {
               if (j !== i) {
                 b.querySelector(".emoji").style.display = "none";
                 b.querySelector(".accionable").classList.add("show");
@@ -235,21 +242,20 @@
       const overlay = document.getElementById("overlay");
       cta.style.display = "none";
       overlay.style.display = "flex";
-      overlay.innerHTML = "✨ Gracias. Este instante ya cuenta...";
+      overlay.innerHTML = "⏳ Contando lectores...";
 
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
         setTimeout(() => {
-          overlay.innerHTML = `✅ Ya somos <strong>+${data.total.toLocaleString('es-MX')}</strong> abriendo libros físicos 💛`;
-        }, 1300);
+          overlay.innerHTML = `📚<br/>Libros físicos abiertos:<br/><strong>+${data.total.toLocaleString('es-MX')}</strong>`;
+        }, 1200);
         setTimeout(() => location.reload(), 5000);
       } catch {
         overlay.innerText = "⚠️ Error al contar libros.";
       }
     };
 
-    // Mostrar loader solo la primera vez
     if (sessionStorage.getItem("trigguiLoaderShown")) {
       document.getElementById("loader").style.display = "none";
       document.getElementById("grid").style.animation = "none";
