--- a/public/index.html
+++ b/public/index.html
@@ -62,30 +62,31 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      text-align: center;
       color: #fff;
       font-size: 1.4rem;
       font-weight: bold;
       cursor: pointer;
       background-size: 200% 200%;
       transition: all 0.4s ease;
-      overflow: hidden;
-      padding: 1.5rem;
-      box-shadow: 0 8px 26px rgba(0,0,0,0.45);
-      background-blend-mode: screen;
+      padding: 1rem;
+      box-shadow: 0 10px 26px rgba(0,0,0,0.6);
+      position: relative;
+      text-align: center;
     }
 
     .block:hover {
-      transform: scale(1.06);
-      filter: brightness(1.2);
+      transform: scale(1.07);
+      filter: brightness(1.15);
     }
 
     .emoji {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100%;
+      flex: 1;
+      font-size: 1.6rem;
       width: 100%;
+      height: 100%;
     }
 
     .accionable {
@@ -136,7 +137,7 @@
     }
 
     #overlay strong {
-      font-size: 2.2rem;
+      font-size: 2.4rem;
       color: #00ffc3;
       margin-top: 1rem;
     }
@@ -190,15 +191,23 @@
   <div id="overlay"></div>
 
   <script>
-    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
+    const emojis = ["🌈","🔥","💡","🧭","⚡","🎯","🪄","🌟"];
+    const gradients = [
+      ["#ff6ec4", "#7873f5"],
+      ["#42e695", "#3bb2b8"],
+      ["#ff9a9e", "#fad0c4"],
+      ["#a18cd1", "#fbc2eb"],
+      ["#f093fb", "#f5576c"],
+      ["#4facfe", "#00f2fe"],
+      ["#43e97b", "#38f9d7"],
+      ["#fa709a", "#fee140"]
+    ];
+
     let revelado = false;
 
-    function genGradient(hex) {
-      const r = parseInt(hex.slice(1,3),16);
-      const g = parseInt(hex.slice(3,5),16);
-      const b = parseInt(hex.slice(5,7),16);
-      const light = `rgba(${Math.min(r+50,255)},${Math.min(g+50,255)},${Math.min(b+50,255)},0.75)`;
-      return `linear-gradient(135deg, ${hex}, ${light})`;
+    function crearGradiente(i) {
+      const [a, b] = gradients[i % gradients.length];
+      return `linear-gradient(135deg, ${a}, ${b})`;
     }
 
     async function iniciar() {
@@ -211,7 +220,7 @@
       libro.palabras.forEach((palabra, i) => {
         const div = document.createElement("div");
         div.className = "block";
-        div.style.background = genGradient(libro.colores[i] || "#555");
+        div.style.background = crearGradiente(i);
         div.innerHTML = `
           <div class="emoji">${emojis[i]} ${palabra}</div>
           <div class="accionable">${libro.frases[i]}</div>
@@ -219,7 +228,7 @@
         div.onclick = () => {
           if (revelado) return location.reload();
           if (i === portadaIndex) {
-            div.innerHTML = `<img src="${libro.portada}" style="max-width:85%; max-height:75%; border-radius:16px; box-shadow:0 10px 30px rgba(0,0,0,0.4)" />`;
+            div.replaceWith(crearPortada(libro.portada));
             document.querySelectorAll(".block").forEach((b, j) => {
               if (j !== i) {
                 b.querySelector(".emoji").style.display = "none";
@@ -237,6 +246,24 @@
       });
     }
 
+    function crearPortada(src) {
+      const img = document.createElement("img");
+      img.src = src;
+      img.style.maxWidth = "85%";
+      img.style.maxHeight = "75%";
+      img.style.borderRadius = "16px";
+      img.style.boxShadow = "0 12px 32px rgba(0,0,0,0.5)";
+      img.style.animation = "fadeIn 1s ease forwards";
+      const cont = document.createElement("div");
+      cont.style.display = "flex";
+      cont.style.justifyContent = "center";
+      cont.style.alignItems = "center";
+      cont.style.position = "relative";
+      cont.style.zIndex = "2";
+      cont.appendChild(img);
+      return cont;
+    }
+
     document.getElementById("cta").onclick = async () => {
       const cta = document.getElementById("cta");
       const overlay = document.getElementById("overlay");
@@ -248,7 +275,7 @@
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
         setTimeout(() => {
-          overlay.innerHTML = `📚<br/>Libros físicos abiertos:<br/><strong>+${data.total.toLocaleString('es-MX')}</strong>`;
+          overlay.innerHTML = `📚<br/><strong>+${data.total.toLocaleString('es-MX')}</strong><br/>libros físicos abiertos`;
         }, 1200);
         setTimeout(() => location.reload(), 5000);
       } catch {
