--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
     #grid {
       position: absolute;
-      inset: 2.5vw;
+      inset: 2vw;
       display: grid;
       gap: 2vw;
       opacity: 0;
@@ -56,37 +56,48 @@
       z-index: 1;
     }
 
+    @media (orientation: landscape) {
+      #grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+      }
+    }
+
+    @media (orientation: portrait) {
+      #grid {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(2, 1fr);
+      }
+    }
+
     .block {
       border-radius: 24px;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
+      text-align: center;
       color: #fff;
       font-size: 1.4rem;
       font-weight: bold;
       cursor: pointer;
-      background-size: 200% 200%;
-      transition: all 0.4s ease;
+      background-size: 300% 300%;
+      transition: none;
       padding: 1rem;
-      box-shadow: 0 10px 26px rgba(0,0,0,0.6);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
       position: relative;
-      text-align: center;
-    }
-
-    .block:hover {
-      transform: scale(1.07);
-      filter: brightness(1.15);
+      height: 100%;
+      width: 100%;
     }
 
     .emoji {
       display: flex;
       justify-content: center;
       align-items: center;
-      flex: 1;
-      font-size: 1.6rem;
       width: 100%;
       height: 100%;
+      font-size: 1.6rem;
+      text-align: center;
+      line-height: 1.4;
     }
 
     .accionable {
@@ -137,23 +148,25 @@
     }
 
     #overlay strong {
-      font-size: 2.4rem;
+      font-size: 2.5rem;
       color: #00ffc3;
       margin-top: 1rem;
     }
 
-    @media (orientation: landscape) {
-      #grid {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr;
-      }
+    .portada-flotante {
+      animation: aparecer 0.8s ease-out forwards;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
     }
 
-    @media (orientation: portrait) {
-      #grid {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: repeat(2, 1fr);
-      }
+    .portada-flotante img {
+      max-width: 90%;
+      max-height: 85%;
+      border-radius: 20px;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.5);
+      animation: respiracion 3s ease-in-out infinite;
     }
 
     @keyframes spin {
@@ -173,6 +186,16 @@
       0%, 100% { transform: translateX(-50%) scale(1); }
       50% { transform: translateX(-50%) scale(1.08); }
     }
+
+    @keyframes aparecer {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes respiracion {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.02); }
+    }
   </style>
 </head>
 <body>
@@ -191,7 +214,7 @@
   <div id="overlay"></div>
 
   <script>
-    const emojis = ["🌈","🔥","💡","🧭","⚡","🎯","🪄","🌟"];
+    const emojis = ["🌈", "🔥", "💡", "🧭", "⚡", "🎯", "🪄", "🌟"];
     const gradients = [
       ["#ff6ec4", "#7873f5"],
       ["#42e695", "#3bb2b8"],
@@ -247,19 +270,10 @@
     }
 
     function crearPortada(src) {
+      const cont = document.createElement("div");
+      cont.className = "portada-flotante";
       const img = document.createElement("img");
       img.src = src;
-      img.style.maxWidth = "85%";
-      img.style.maxHeight = "75%";
-      img.style.borderRadius = "16px";
-      img.style.boxShadow = "0 12px 32px rgba(0,0,0,0.5)";
-      img.style.animation = "fadeIn 1s ease forwards";
-      const cont = document.createElement("div");
-      cont.style.display = "flex";
-      cont.style.justifyContent = "center";
-      cont.style.alignItems = "center";
-      cont.style.position = "relative";
-      cont.style.zIndex = "2";
       cont.appendChild(img);
       return cont;
     }
