--- a/public/index.html
+++ b/public/index.html
@@ -3,307 +3,279 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>TrigguiApp – Un instante. Un universo.</title>
+  <title>TrigguiApp – Un instante, un universo</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
-      width: 100%;
       height: 100%;
-      background: #0d0e1a;
       font-family: 'Archivo', sans-serif;
+      background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
       overflow: hidden;
     }
-
-    #loader {
-      position: absolute;
+    .loader {
+      position: fixed;
       inset: 0;
-      background: #000;
+      background: #0d0e1a;
+      color: white;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      text-align: center;
-      color: white;
-      z-index: 50;
-      animation: fadeOut 6s ease forwards;
+      flex-direction: column;
+      z-index: 999;
+      animation: fadeOut 2s 2.8s forwards;
     }
-
-    .loader-circle {
-      width: 60px;
-      height: 60px;
-      border: 3px solid #fff;
-      border-top: 3px solid transparent;
-      border-radius: 50%;
-      animation: spin 4s linear infinite;
-      margin-bottom: 1.5rem;
-    }
-
-    .loader-text {
-      font-family: 'Poppins', sans-serif;
+    .loader p {
       font-size: 1.2rem;
-      line-height: 1.6;
-      color: #ccc;
-      padding: 0 2rem;
+      margin-top: 1.2rem;
+      text-align: center;
+      opacity: 0.8;
     }
-
-    #grid {
-      width: 100%;
-      height: 100%;
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
+    .grid {
+      position: absolute;
+      top: 1.5vw; bottom: 1.5vw; left: 1.5vw; right: 1.5vw;
       display: grid;
-      gap: 0;
+      gap: 1vw;
       opacity: 0;
-      animation: fadeIn 1s ease 6s forwards;
+      animation: fadeInGrid 1s 3s forwards;
     }
-
+    @keyframes fadeInGrid {
+      to { opacity: 1; }
+    }
     @media (orientation: landscape) {
-      #grid {
+      .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
-
     @media (orientation: portrait) {
-      #grid {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+      .grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
       }
     }
-
     .block {
+      border-radius: 18px;
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
-      font-size: 1.4rem;
+      text-align: center;
+      font-size: 1.3rem;
       font-weight: bold;
       color: white;
-      background-size: 300% 300%;
-      width: 100%;
-      height: 100%;
+      position: relative;
       cursor: pointer;
-      box-shadow: inset 0 0 40px rgba(255,255,255,0.05), 0 0 20px rgba(0,0,0,0.6);
-      border-radius: 0;
-      text-align: center;
-      transition: none;
+      background-size: 250% 250%;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.35);
+      transition: transform 0.25s ease;
     }
-
-    .emoji {
-      font-size: 1.6rem;
+    .label {
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100%;
       width: 100%;
-    }
-
-    .accionable {
-      font-family: 'Poppins', sans-serif;
-      font-size: 1rem;
-      opacity: 0;
       padding: 1rem;
-      transition: opacity 0.4s ease;
     }
-
-    .accionable.show {
-      opacity: 1;
+    .frase, .portada {
+      position: absolute;
+      inset: 0;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 1rem;
+      font-family: 'Poppins', sans-serif;
+      font-size: 1.1rem;
+      color: white;
     }
-
-    #cta {
+    .portada {
+      flex-direction: column;
+      animation: fadeIn 1s ease forwards;
+    }
+    .portada img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 20px;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.5);
+    }
+    .ctaZone {
       position: fixed;
       bottom: 3vh;
       left: 50%;
       transform: translateX(-50%);
-      background: linear-gradient(135deg, #00ffc3, #00bfa6);
-      color: #000;
-      font-weight: 700;
-      border: none;
-      padding: 0.6rem 1.4rem;
-      font-size: 0.95rem;
-      border-radius: 999px;
-      cursor: pointer;
       display: none;
-      animation: pulse 2s infinite;
-      z-index: 5;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+      z-index: 10;
+      text-align: center;
     }
-
-    #overlay {
+    .ctaZone button {
+      background: linear-gradient(135deg, #00ffd5, #00c3ff, #0099ff);
+      background-size: 200% auto;
+      color: #000;
+      border: none;
+      padding: 0.7rem 1.6rem;
+      border-radius: 999px;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 4px 18px rgba(0,0,0,0.25);
+      animation: pulse 2.5s infinite;
+    }
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+    }
+    .celebracion-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.95);
-      color: #fff;
-      font-family: 'Poppins', sans-serif;
-      font-size: 1.3rem;
+      background: rgba(0, 0, 0, 0.85);
       display: none;
       align-items: center;
       justify-content: center;
+      z-index: 20;
+      animation: fadeIn 0.5s ease both;
+    }
+    .celebracion-message {
+      font-size: 1.8rem;
+      color: #fff;
       text-align: center;
-      flex-direction: column;
-      z-index: 30;
-      padding: 2rem;
+      font-family: 'Poppins', sans-serif;
+      background: rgba(255, 255, 255, 0.05);
+      padding: 1.5rem 2.5rem;
+      border-radius: 18px;
+      box-shadow: 0 0 40px rgba(255,255,255,0.15);
     }
-
-    #overlay strong {
-      font-size: 2.5rem;
-      color: #00ffc3;
-      margin-top: 1rem;
+    .resaltado {
+      color: #ffeb3b;
+      font-weight: 900;
+      font-size: 2.4rem;
     }
-
-    .portada-flotante {
-      animation: aparecer 0.8s ease-out forwards;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      width: 100%;
-    }
-
-    .portada-flotante img {
-      max-width: 90%;
-      max-height: 85%;
-      border-radius: 20px;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.5);
-      animation: respiracion 3s ease-in-out infinite;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @keyframes fadeOut {
-      to { opacity: 0; visibility: hidden; }
-    }
-
     @keyframes fadeIn {
-      to { opacity: 1; }
-    }
-
-    @keyframes pulse {
-      0%, 100% { transform: translateX(-50%) scale(1); }
-      50% { transform: translateX(-50%) scale(1.08); }
-    }
-
-    @keyframes aparecer {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
-    }
-
-    @keyframes respiracion {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.02); }
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
+  <div class="loader" id="loader">
+    <h2>🧘‍♂️ Pausa. Respira.</h2>
+    <p>Elige una palabra para revelar un libro.<br>Y si no es este, ve por el que tengas más cerca.</p>
+  </div>
 
-  <div id="loader">
-    <div class="loader-circle"></div>
-    <div class="loader-text">
-      <strong>Detente.</strong><br/>
-      Este instante es solo tuyo.<br/>
-      Descubre un libro o abre uno que tengas cerca.
+  <div class="grid" id="gridContainer"></div>
+
+  <div class="ctaZone" id="ctaZone">
+    <button id="ctaBtn">📚 Sí, abrí un libro físico (aunque no fue este)</button>
+  </div>
+
+  <div class="celebracion-overlay" id="celebracionOverlay">
+    <div class="celebracion-message" id="celebracionMsg">
+      ✨ <span class="resaltado">...</span><br>libros físicos abiertos
     </div>
   </div>
 
-  <div id="grid"></div>
-  <button id="cta">📖 Sí, abrí un libro físico cercano</button>
-  <div id="overlay"></div>
-
   <script>
-    const emojis = ["🌈","🔥","💡","🧭","⚡","🎯","🪄","🌟"];
-    const gradients = [
-      ["#ff6ec4", "#7873f5"],
-      ["#42e695", "#3bb2b8"],
-      ["#ff9a9e", "#fad0c4"],
-      ["#a18cd1", "#fbc2eb"],
-      ["#f093fb", "#f5576c"],
-      ["#4facfe", "#00f2fe"],
-      ["#43e97b", "#38f9d7"],
-      ["#fa709a", "#fee140"]
-    ];
+    const grid = document.getElementById("gridContainer");
+    const loader = document.getElementById("loader");
+    const ctaZone = document.getElementById("ctaZone");
+    const ctaBtn = document.getElementById("ctaBtn");
+    const celebracionOverlay = document.getElementById("celebracionOverlay");
+    const celebracionMsg = document.getElementById("celebracionMsg");
 
-    let revelado = false;
+    let libro = null, portadaBloque = 0, revelado = false;
 
-    function crearGradiente(i) {
-      const [a, b] = gradients[i % gradients.length];
-      return `linear-gradient(135deg, ${a}, ${b})`;
+    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
+
+    function generarGradiente(hex) {
+      const r = parseInt(hex.slice(1, 3), 16);
+      const g = parseInt(hex.slice(3, 5), 16);
+      const b = parseInt(hex.slice(5, 7), 16);
+      const light = `rgba(${Math.min(r+40,255)},${Math.min(g+40,255)},${Math.min(b+40,255)},0.85)`;
+      return `linear-gradient(135deg, ${hex}, ${light})`;
     }
 
-    async function iniciar() {
-      const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
-      const data = await res.json();
-      const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
-      const portadaIndex = Math.floor(Math.random()*4);
-
-      const grid = document.getElementById("grid");
+    function dibujarUI() {
+      grid.innerHTML = "";
       libro.palabras.forEach((palabra, i) => {
-        const div = document.createElement("div");
-        div.className = "block";
-        div.style.background = crearGradiente(i);
-        div.innerHTML = `
-          <div class="emoji">${emojis[i]} ${palabra}</div>
-          <div class="accionable">${libro.frases[i]}</div>
-        `;
-        div.onclick = () => {
-          if (revelado) return location.reload();
-          if (i === portadaIndex) {
-            div.replaceWith(crearPortada(libro.portada));
-            document.querySelectorAll(".block").forEach((b, j) => {
-              if (j !== i) {
-                b.querySelector(".emoji").style.display = "none";
-                b.querySelector(".accionable").classList.add("show");
-              }
-            });
-            document.getElementById("cta").style.display = "block";
-            revelado = true;
-          } else {
-            div.querySelector(".emoji").style.display = "none";
-            div.querySelector(".accionable").classList.add("show");
-          }
-        };
-        grid.appendChild(div);
+        const block = document.createElement("div");
+        block.className = "block";
+        block.dataset.index = i;
+        block.style.background = generarGradiente(libro.colores[i] || "#444");
+
+        const label = document.createElement("div");
+        label.className = "label";
+        label.textContent = `${emojis[i]} ${palabra}`;
+
+        const frase = document.createElement("div");
+        frase.className = "frase";
+        frase.textContent = libro.frases[i];
+
+        const portada = document.createElement("div");
+        portada.className = "portada";
+        const img = document.createElement("img");
+        img.src = libro.portada;
+        portada.appendChild(img);
+
+        block.append(label, frase, portada);
+        block.onclick = () => manejarClick(block);
+        grid.appendChild(block);
       });
     }
 
-    function crearPortada(src) {
-      const cont = document.createElement("div");
-      cont.className = "portada-flotante";
-      const img = document.createElement("img");
-      img.src = src;
-      cont.appendChild(img);
-      return cont;
+    function manejarClick(block) {
+      if (revelado) return location.reload();
+      const i = parseInt(block.dataset.index);
+      const [label, frase, portada] = block.children;
+
+      if (i === portadaBloque) {
+        block.innerHTML = "";
+        portada.style.display = "flex";
+        block.appendChild(portada);
+
+        [...grid.children].forEach((blk, j) => {
+          if (j !== i) {
+            blk.children[0].style.display = "none";
+            blk.children[1].style.display = "flex";
+          }
+        });
+
+        ctaZone.style.display = "flex";
+        revelado = true;
+      } else {
+        label.style.display = "none";
+        frase.style.display = "flex";
+      }
     }
 
-    document.getElementById("cta").onclick = async () => {
-      const cta = document.getElementById("cta");
-      const overlay = document.getElementById("overlay");
-      cta.style.display = "none";
-      overlay.style.display = "flex";
-      overlay.innerHTML = "⏳ Contando lectores...";
-
+    ctaBtn.onclick = async () => {
+      ctaBtn.disabled = true;
+      celebracionOverlay.style.display = "flex";
+      celebracionMsg.innerHTML = '✨ <span class="resaltado">...</span><br>libros físicos abiertos';
       try {
         const res = await fetch("https://triggui-api.vercel.app/api/increment");
         const data = await res.json();
-        setTimeout(() => {
-          overlay.innerHTML = `📚<br/><strong>+${data.total.toLocaleString('es-MX')}</strong><br/>libros físicos abiertos`;
-        }, 1200);
-        setTimeout(() => location.reload(), 5000);
+        celebracionMsg.innerHTML = `✨ <span class="resaltado">${data.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;
       } catch {
-        overlay.innerText = "⚠️ Error al contar libros.";
+        celebracionMsg.innerText = "📚 Error al contar libros";
       }
     };
 
-    if (sessionStorage.getItem("trigguiLoaderShown")) {
-      document.getElementById("loader").style.display = "none";
-      document.getElementById("grid").style.animation = "none";
-      document.getElementById("grid").style.opacity = "1";
-      iniciar();
-    } else {
-      sessionStorage.setItem("trigguiLoaderShown", "true");
-      window.addEventListener("load", () => setTimeout(iniciar, 6000));
+    async function iniciar() {
+      try {
+        const res = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json");
+        const data = await res.json();
+        libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+        portadaBloque = Math.floor(Math.random() * 4);
+        dibujarUI();
+      } catch (e) {
+        console.error("Error cargando contenido:", e);
+      }
     }
+
+    window.addEventListener("load", iniciar);
   </script>
 </body>
 </html>
